# projeto_fastapi_web

./: .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
core/: configs.py  database.py
templates/: _base.html
templates/about/: index.html  team_member.html
templates/blogs/blog_home/: blog_home.html  index.html
templates/blogs/blog_post/: index.html
templates/contact/: index.html
templates/faq/: index.html
templates/home/: index.html
templates/portfolio/portfolio_item/: index.html
templates/portfolio/portfolio_overview/: index.html
views/: home_view.py
